--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,27 +127,25 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/BasicRoom
-MRUItem2=/Game/Levels/MasterLevel
-MRUItem3=/Game/Levels/TestingPauseMenuLevel
-MRUItem4=/Game/Levels/TutorialRoom
-MRUItem5=/Game/Levels/OtherRoom
-MRUItem6=/Game/Levels/InGameScreen
-MRUItem7=/Game/InGame/InGame
-MRUItem8=/Game/InGameScreen
-MRUItem9=/Game/StartScreen
-MRUItem10=/Game/StarterContent/Maps/Minimal_Default
+MRUItem0=/Game/Levels/EndRoom
+MRUItem1=/Game/Levels/MainMenu
+MRUItem2=/Game/Levels/BasicRoom
+MRUItem3=/Game/Levels/MasterLevel
+MRUItem4=/Game/Levels/TestingPauseMenuLevel
+MRUItem5=/Game/Levels/TutorialRoom
+MRUItem6=/Game/Levels/OtherRoom
+MRUItem7=/Game/Levels/InGameScreen
+MRUItem8=/Game/InGame/InGame
+MRUItem9=/Game/InGameScreen
+MRUItem10=/Game/StartScreen
+MRUItem11=/Game/StarterContent/Maps/Minimal_Default
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/EndRoom
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Enemey.Enemey
-OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/GUI/MainMenu/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
+CleanShutdown=False
+OpenAssetsAtExit=/Game/InGame/B_RoomFinal.B_RoomFinal
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -753,6 +751,24 @@ K2Node_FunctionResult.Outputs=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+B_RoomFinal_C.TransformCommon=True
+B_RoomFinal_C.Default=True
+B_RoomFinal_C.Rendering=True
+B_RoomFinal_C.Replication=True
+B_RoomFinal_C.Collision=True
+B_RoomFinal_C.HLOD=True
+B_RoomFinal_C.Input=True
+B_RoomFinal_C.Actor=True
+B_RoomFinal_C.Tick=True
+B_RoomFinal_C.WorldPartition=True
+B_RoomFinal_C.Events=True
+Wall_C.TransformCommon=True
+Wall_C.Rendering=True
+Wall_C.Replication=True
+Wall_C.Collision=True
+Wall_C.HLOD=True
+Wall_C.Input=True
+Wall_C.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1773,12 +1789,12 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=
-SceneComponent=
+SceneComponent=BlockingVolume.Collision.Collision,
 StaticMeshComponent=
 B_Room_C=BlockingVolume.Collision.Collision,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 PlayerStart=BlockingVolume.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=BlockingVolume.Collision.Collision,
 B_PlayerCharacter_C=BlockingVolume.Collision.Collision,
 Door_C=BlockingVolume.Collision.Collision,
 PropertyWrapper=BlockingVolume.Collision.Collision,
@@ -1791,6 +1807,8 @@ ChildActorComponent=BlockingVolume.Collision.Collision,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
 Enemey_C=BlockingVolume.Collision.Collision,
+Wall_C=BlockingVolume.Collision.Collision,
+B_RoomFinal_C=BlockingVolume.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1850,25 +1868,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InGame/B_PlayerCharacter
-MRUItem1=/Game/Enemey
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/BasicRoom
-MRUItem4=/Game/GUI/MainMenu/PauseMenu
-MRUItem5=/Game/Levels/MasterLevel
-MRUItem6=/Game/Levels/TestingPauseMenuLevel
-MRUItem7=/Game/GUI/MainMenu/MainMenu
-MRUItem8=/Game/Levels/TutorialRoom
-MRUItem9=/Game/Levels/OtherRoom
-MRUItem10=/Game/Levels/InGameScreen
-MRUItem11=/Game/InGame/B_Room
-MRUItem12=/Game/InGame/Door
-MRUItem13=/Game/InGame/B_PlayerBullet
-MRUItem14=/Game/InGame/MyPlayerController
-MRUItem15=/Game/InGameScreen
-MRUItem16=/Game/MyGameModeBase
-MRUItem17=/Game/StartScreen
-MRUItem18=/Game/MyPlayerController
+MRUItem0=/Game/InGame/B_RoomFinal
+MRUItem1=/Game/Levels/EndRoom
+MRUItem2=/Game/InGame/B_PlayerCharacter
+MRUItem3=/Game/Enemey
+MRUItem4=/Game/Levels/MainMenu
+MRUItem5=/Game/Levels/BasicRoom
+MRUItem6=/Game/GUI/MainMenu/PauseMenu
+MRUItem7=/Game/Levels/MasterLevel
+MRUItem8=/Game/Levels/TestingPauseMenuLevel
+MRUItem9=/Game/GUI/MainMenu/MainMenu
+MRUItem10=/Game/Levels/TutorialRoom
+MRUItem11=/Game/Levels/OtherRoom
+MRUItem12=/Game/Levels/InGameScreen
+MRUItem13=/Game/InGame/B_Room
+MRUItem14=/Game/InGame/Door
+MRUItem15=/Game/InGame/B_PlayerBullet
+MRUItem16=/Game/InGame/MyPlayerController
+MRUItem17=/Game/InGameScreen
+MRUItem18=/Game/MyGameModeBase
+MRUItem19=/Game/StartScreen
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2142,6 +2161,7 @@ StaticMeshComponent.Physics=True
 B_Room_C.Actor=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/InGame/Wall.Wall;
 RecentlyPlaced=/Game/Enemey.Enemey;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
